--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   <!--<script src="../test.js"></script>-->
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
 </body>
 </html>
